2005-06-19  David Lawrence Ramsey  <pooka_regent@sluggy.net>

	* pt_BR.po: Typo fix.

2005-06-15  Jordi Mallach  <jordi@gnu.org>

	* de.po: Typo fix by Jens Seidel.

2005-05-23  Jordi Mallach  <jordi@gnu.org>

	* fr.po: Updated French translation by
	Jean-Philippe Guérard.

2005-04-27  Jordi Mallach  <jordi@gnu.org>

	* ms.po: Updated Malay translation by
	Sharuzzaman Ahmat Raslan.

2005-04-22  Jordi Mallach  <jordi@gnu.org>

	* ca.po: Updated Norwegian bokmål translation by
	Geir Helland.

2005-04-20  Jordi Mallach  <jordi@gnu.org>

	* ms.po: Updated Malay translation by
	Sharuzzaman Ahmat Raslan.
	* ro.po: Updated Romanian translation by Laurentiu Buzdugan.
	* zh_TW.po: Updated Traditional Chinese translation by
	CHAO Wei-Lun.

2005-04-18  Jordi Mallach  <jordi@gnu.org>

	* vi.po: Updated Vietnamese translation by Phan Vinh Thinh.

2005-04-18  Jordi Mallach  <jordi@gnu.org>

	* ca.po: Updated Catalan translation.
	* it.po: Updated Italian translation by Marco Colombo.
	* ro.po: Updated Romanian translation by Laurentiu Buzdugan.

2005-04-14  Jordi Mallach  <jordi@gnu.org>

	* es.po: Updated Spanish translation by
	Ricardo Javier Cárdenes Medina.

2005-04-13  Jordi Mallach  <jordi@gnu.org>

	* vi.po: New Vietnamese translation by Phan Vinh Thinh.
	* LINGUAS: Added "vi".

2005-04-09  Jordi Mallach  <jordi@gnu.org>

	* zh_TW.po: Added Plural-Forms header and fix format specification
	typos.

2005-04-08  Jordi Mallach  <jordi@gnu.org>

	* ca.po: Updated Catalan translation.
	* it.po: Updated Italian translation by Marco Colombo.
	* zh_TW.po: Updated Traditional Chinese translation by
	CHAO Wei-Lun.

2005-04-06  Jordi Mallach  <jordi@gnu.org>

	* rw.po: New Kinyarwanda translation by Steve Murphy.
	* LINGUAS: Added "rw".

2005-04-05  Jordi Mallach  <jordi@gnu.org>

	* fr.po: Updated French translation by
	Jean-Philippe Guérard.
	* ro.po: Updated Romanian translation by
	Laurentiu Buzdugan.

2005-03-11  Jordi Mallach  <jordi@gnu.org>
